--- a/views/products.ejs
+++ b/views/products.ejs
@@ -1,28 +1,20 @@
-<%- include("partials/header") %>
-
-
-
+<%- include("partials/header.ejs") %>
 
 <div class="container">
-    <h2>Products</h2>
+  <h2>Products</h2>
 
-    <div class="product-grid">
-    <% products.forEach(p => { %>
-    <div class="product-card">
-        <img src="<%= p.image %>" width="200">
-        <h3><%= p.name %></h3>
-        <p>$<%= p.price %></p>
-        <form action="/add-to-cart" method="POST">
-            <input type="hidden" name="productId" value="<%= p.id %>">
-            <button type="submit" class="red-btn">Add To Cart</button>
-        </form>
-    </div>
+  <div class="product-grid">
+    <% products.forEach(product => { %>
+      <div class="product-card">
+        <img src="<%= product.image %>" alt="<%= product.name %>" width="200">
+
+        <h3><%= product.name %></h3>
+        <p>$<%= product.price %></p>
+      </div>
     <% }) %>
+  </div>
+
+  <a href="/cart" class="cart-btn">Go to Cart</a>
 </div>
 
-
-    <a href="/cart" class="cart-btn">Go to Cart</a>
-</div>
-
-
-<%- include("partials/footer") %>
+<%- include("partials/footer.ejs") %>
