--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
     <div class="product-grid">
     <% products.forEach(p => { %>
     <div class="product-card">
-        <img src="<%= product.image %>" alt="<%= product.name %>" width="200">
+        <img src="<%= p.image %>" alt="<%= p.name %>" width="200">
 
 
         <h3><%= p.name %></h3>
