--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,8 +12,10 @@ body { font-family: 'Poppins', sans-serif; margin:0; background:#fff; }
 }
 
 /******** HERO ********/
+
 .hero { height:75vh; background:url('/images/wallpaper.webp') center/cover no-repeat; display:flex; align-items:center; }
 .hero-text { color:white; margin-left:8%; }
+
 .hero-text h1 { font-size:55px; font-weight:700; }
 .btn { background:black; color:white; padding:12px 25px; text-decoration:none; margin-top:12px; display:inline-block; }
 
@@ -246,6 +248,13 @@ body { font-family: 'Poppins', sans-serif; margin:0; background:#fff; }
 .switch-auth a:hover {
     text-decoration: underline;
 }
+
+input:focus {
+    border-color:#d10024;
+    box-shadow: 0 0 5px rgba(209,0,36,0.5);
+    outline:none;
+}
+
 
 .cart-btn {
     display: inline-flex;
